# lm-assistant-for-biocatalysis

./: .dockerignore  .gitignore  LICENSE  README.md  dockerfile  examples.ipynb  mit.tmpl  pyproject.toml  tools_description.md
src/lmabc/: __init__.py  cli.py  configuration.py  core.py  test.py
src/lmabc/app/: __init__.py  core.py  examples_config.py  launcher.py  tool_descriptions.py
src/lmabc/llms/: __init__.py  _huggingface.py  _ollama.py  _watsonx.py
src/lmabc/resources/: documentation.md  styles.css
src/lmabc/resources/mdp_files/: npt.mdp  nvt.mdp
src/lmabc/resources/run_files/: run_minimization.sh  run_npt.sh  run_nvt.sh
src/lmabc/tools/: __init__.py  blast.py  blast_utils.py  core.py  enzyme_optimization.py  md_simulations.py  mutagenesis.py  pdb.py  rxnaamapper.py
src/lmabc/utils/: assistant_utils.py
tests/: test_agent_functionality.py
tools_setup/: rxn_aa_mapper_model_download.py  setup.sh
